[gd_scene load_steps=15 format=2]

[ext_resource path="res://Code/Demo.gd" type="Script" id=1]
[ext_resource path="res://scenes/Keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Sheet.tscn" type="PackedScene" id=3]
[ext_resource path="res://2D/dirtyoldtown.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://2D/The-Circle-of-Fifths_-_EMDtips.com_-1.jpg" type="Texture" id=5]
[ext_resource path="res://2D/arial_narrow_7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://2D/Chords/dominante majores-1.png" type="Texture" id=7]
[ext_resource path="res://2D/Chords/acordes mayores-1.png" type="Texture" id=8]
[ext_resource path="res://2D/Chords/acordes menores-1.png" type="Texture" id=9]
[ext_resource path="res://2D/Chords/aumented-1.png" type="Texture" id=10]
[ext_resource path="res://2D/Chords/disminished-1.png" type="Texture" id=11]
[ext_resource path="res://2D/Scales/notes-of-the-bass-clef.jpg" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

size = 19
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Piano" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 389.251, 223.945 )

[node name="Sheet" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 255.161, 352.44 )

[node name="ScaleName" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 49.0
margin_top = 83.0
margin_right = 289.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.15625, 0.15564, 0.15564, 1 )
text = "C"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="The-Circle-of-Fifths_-_EMDtips.com_-1" type="Sprite" parent="." index="3"]

position = Vector2( 809.009, 217.155 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 636.0
margin_top = 3.0
margin_right = 969.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.273438, 0.267029, 0.267029, 1 )
text = "Use arrow keys to change scales"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Control" type="Control" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Left" type="Button" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 698.803
margin_top = 412.408
margin_right = 747.803
margin_bottom = 458.408
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<<"
flat = false
align = 1

[node name="Right" type="Button" parent="Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 750.354
margin_top = 411.84
margin_right = 799.354
margin_bottom = 457.84
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">>"
flat = false
align = 1

[node name="Mayor" type="Button" parent="Control" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 836.0
margin_top = 411.0
margin_right = 887.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Major"
flat = false
align = 1

[node name="Minor" type="Button" parent="Control" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 889.0
margin_top = 411.0
margin_right = 940.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Minor"
flat = false
align = 1

[node name="Chord M" type="Button" parent="Control" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 66.0
margin_top = 751.0
margin_right = 114.0
margin_bottom = 789.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Major"
flat = false
align = 1

[node name="Chord m" type="Button" parent="Control" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_top = 751.0
margin_right = 185.0
margin_bottom = 790.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Minor"
flat = false
align = 1

[node name="Dominant" type="Button" parent="Control" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 194.0
margin_top = 750.0
margin_right = 269.0
margin_bottom = 792.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Dominant"
flat = false
align = 1

[node name="Aumented" type="Button" parent="Control" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 285.0
margin_top = 751.0
margin_right = 364.0
margin_bottom = 792.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Aumented"
flat = false
align = 1

[node name="Disminished" type="Button" parent="Control" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_top = 749.0
margin_right = 458.0
margin_bottom = 792.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Diminished"
flat = false
align = 1

[node name="Chords" type="Node2D" parent="." index="6"]

__meta__ = {
"_edit_lock_": true
}

[node name="dominante majores-1" type="Sprite" parent="Chords" index="0"]

position = Vector2( 500.382, 643.92 )
scale = Vector2( 0.3, 0.478877 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="acordes mayores-1" type="Sprite" parent="Chords" index="1"]

position = Vector2( 499.648, 645.742 )
scale = Vector2( 0.424019, 0.57074 )
texture = ExtResource( 8 )

[node name="acordes menores-1" type="Sprite" parent="Chords" index="2"]

position = Vector2( 499.755, 649.451 )
scale = Vector2( 0.430638, 0.513334 )
texture = ExtResource( 9 )

[node name="aumented-1" type="Sprite" parent="Chords" index="3"]

position = Vector2( 498.866, 659.19 )
scale = Vector2( 0.43158, 0.635696 )
texture = ExtResource( 10 )

[node name="disminished-1" type="Sprite" parent="Chords" index="4"]

position = Vector2( 501.194, 643.552 )
scale = Vector2( 0.434822, 0.6612 )
texture = ExtResource( 11 )

[node name="notes-of-the-bass-clef" type="Sprite" parent="." index="7"]

position = Vector2( 322.793, 489.463 )
scale = Vector2( 0.657723, 0.396561 )
texture = ExtResource( 12 )

[connection signal="pressed" from="Control/Left" to="." method="_on_Left_pressed"]

[connection signal="pressed" from="Control/Right" to="." method="_on_Right_pressed"]

[connection signal="pressed" from="Control/Mayor" to="." method="_on_Mayor_pressed"]

[connection signal="pressed" from="Control/Minor" to="." method="_on_Minor_pressed"]

[connection signal="pressed" from="Control/Chord M" to="." method="_MajorChord"]

[connection signal="pressed" from="Control/Chord m" to="." method="_minorChords"]

[connection signal="pressed" from="Control/Dominant" to="." method="_DominantChord"]

[connection signal="pressed" from="Control/Aumented" to="." method="_aumentedChords"]

[connection signal="pressed" from="Control/Disminished" to="." method="_DisminishedChords"]


